update for semi-instructions

--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -199,40 +199,42 @@
 	<div class='col-7 courier-font'>
 		<button class='btn' id='data-page2'>Take Me Back To The Testing Area</button>
 		<hr>
-		<h4><strong><p>Gearbox is currently in development. To see a demonstration of functionality,
+		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving data gathered from your smartphone. Weather it's fast lap times, saftey concerns or maybe you're just curious, Gearbox is a fun and accurate way for you to see whats on your cars mind. To see a demonstration of current functionality,
 		click 'Load Profile' (loads default app parameters), and then click 'Run Program'.</p>
 		<p>OR</p>
-		<p>Input fields are able to accept user defined parameters as follows:</p>
+		<p>Input fields are able to accept user defined parameters (described below). Don't worry about leaving certain fields (or all) blank; they will automatically revert to the default settings. At any time you may pause or reload the data. You can also click 'Show My Report' to see the data that is being logged that relates to your 'Report Trip' inputs.  Feel free to move back and forth between the different rooms in the testing area without pausing or stopping the data flow.</p>
+		
+		<p>User Defined Parameters:</p>
 		<p><input class='btn' placeholder='Start Time'></input>
-		Start time in milliseconds</p>
+		Start time in milliseconds.</p>
 		<p><input class='btn' placeholder='End Time'></input>
-		End time in milliseconds</p>
+		End time in milliseconds.</p>
 		<p><input class='btn' placeholder='MultiX Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the X axis of the accelerometer (left and right latteral)</p>
+		The ammount of movement present in the visuals that correspond to the X axis of the accelerometer. (left and right latteral)</p>
 		<p><input class='btn' placeholder='MultiY Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the Y axis of the accelerometer (braking and acceleration)</p>
+		The ammount of movement present in the visuals that correspond to the Y axis of the accelerometer. (braking and acceleration)</p>
 		<p><input class='btn' placeholder='MultiZ Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the Z axis of the accelerometer (up and down, bumps and dips)</p>
+		The ammount of movement present in the visuals that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
 		<p><input class='btn' placeholder='Skip Data Points'></input>
-		Skip this amount of data points between each point while allowing data to still be presented in proper time (larger files, slower computers)</p>
+		Where N is the number you enter, this will cause the apolication to interpret only every N'th data point, while allowing the information to continue to be presented in proper time. (larger files, slower computers)</p>
 		<p><input class='btn' placeholder='Report Trip X'></input>
-		The number (N) entered represents N meters/second^2.  When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also turn red.</p>
+		The number N entered represents N meters/second^2.  When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also become red.</p>
 		<p><input class='btn' placeholder='Report Trip Y'></input>
-		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also turn red. </p>
+		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also become red. </p>
 		<p><input class='btn' placeholder='Report Trip Z'></input>
-		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also turn red.</p>
+		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also become red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
-		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the graphic respresentations (pictures) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50</p>
+		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the graphic respresentations (pictures) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
-		The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50</p>
+		The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Data'></input>
-		The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50</p>
+		The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50.</p>
 
 		<p><input value='Load Profile' class='btn'></input>
 		Push this button after entering your custom parameters.  If any fields are left blank, they will load the default values so you may pick and choose which custom parameters you would like to test with</p>
   		<p><button class='btn center' id='run-program-button'>Run Program</button>
-  		This will run the program
-		<p>The results you see is a demo of my own previousley logged data. You may import your own data if you wish :)</p></strong>
+  		This will run the program</p>
+		<p>The results you see is a demo of my own previousley logged data. You may import your own data, or set your own parameters for the default demo data. :)</p></strong>
 		<p>Have fun, Chase Terzian</p></h4>
 		<hr>
 
