--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -224,7 +224,7 @@
 		<p><input class='btn' placeholder='Report Trip Z'></input>
 		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also become red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
-		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the graphic respresentations (pictures) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50.</p>
+		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases. Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
 		The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Data'></input>
@@ -234,7 +234,7 @@
 		Push this button after entering your custom parameters.  If any fields are left blank, they will load the default values so you may pick and choose which custom parameters you would like to test with</p>
   		<p><button class='btn center' id='run-program-button'>Run Program</button>
   		This will run the program</p>
-		<p>The results you see is a demo of my own previousley logged data. You may import your own data, or set your own parameters for the default demo data. :)</p></strong>
+		<p>The results you see are a demo of my own previousley logged data. You may import your own data, or set your own parameters for the default demo data. :)</p></strong>
 		<p>Have fun, Chase Terzian</p></h4>
 		<hr>
 
