fixed Db read out, updated semi-instructions

--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -206,29 +206,29 @@
 		
 		<p>User Defined Parameters:</p>
 		<p><input class='btn' placeholder='Start Time'></input>
-		Start time in milliseconds.</p>
+		Default: 0 - Start time in milliseconds.</p>
 		<p><input class='btn' placeholder='End Time'></input>
-		End time in milliseconds.</p>
+		Default: 18000 - End time in milliseconds.</p>
 		<p><input class='btn' placeholder='MultiX Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the X axis of the accelerometer. (left and right latteral)</p>
+		Default: 60 - The ammount of movement present in the visuals that correspond to the X axis of the accelerometer. (left and right latteral)</p>
 		<p><input class='btn' placeholder='MultiY Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the Y axis of the accelerometer. (braking and acceleration)</p>
+		Default: 60 - The ammount of movement present in the visuals that correspond to the Y axis of the accelerometer. (braking and acceleration)</p>
 		<p><input class='btn' placeholder='MultiZ Visuals'></input>
-		The ammount of movement present in the visuals that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
+		Default: 2 - The ammount of movement present in the visuals that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
 		<p><input class='btn' placeholder='Skip Data Points'></input>
-		Where N is the number you enter, this will cause the apolication to interpret only every N'th data point, while allowing the information to continue to be presented in proper time. (larger files, slower computers)</p>
+		Default: 1 - Where N is the number you enter, this will cause the apolication to interpret only every N'th data point, while allowing the information to continue to be presented in proper time. (larger files, slower computers)</p>
 		<p><input class='btn' placeholder='Report Trip X'></input>
-		The number N entered represents N meters/second^2.  When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also become red.</p>
+		Default: 2 - The number N entered represents N meters/second^2.  When the force in the X direction (lateral force on the car)exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also become red.</p>
 		<p><input class='btn' placeholder='Report Trip Y'></input>
-		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also become red. </p>
+		Default: 3 - Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also become red. </p>
 		<p><input class='btn' placeholder='Report Trip Z'></input>
-		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also become red.</p>
+		Default: 12 - Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also become red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
-		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases. Recommend less than 50.</p>
+		Default: 20 - The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases.  Some data includeing time, speed and location will not be affected. Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
-		The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
+		Default: 20 - The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Data'></input>
-		The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50.</p>
+		Default: 20 - The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50.</p>
 
 		<p><input value='Load Profile' class='btn'></input>
 		Push this button after entering your custom parameters.  If any fields are left blank, they will load the default values so you may pick and choose which custom parameters you would like to test with</p>
