--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -199,10 +199,10 @@
 	<div class='col-7 courier-font'>
 		<button class='btn' id='data-page2'>Take Me Back To The Testing Area</button>
 		<hr>
-		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving data gathered from your smartphone. Weather it's fast lap times, saftey concerns or maybe you're just curious, Gearbox is a fun and accurate way for you to see whats on your cars mind. To see a demonstration of current functionality,
-		click 'Load Profile' (loads default app parameters), and then click 'Run Program'.</p>
+		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving and location data gathered from various sensors in your smartphone. Weather it's fast lap times you're after, new driver saftey concers or maybe you're just curious, Gearbox is a fun and accurate way for you to see whats on your cars mind. 
+		To see a quick demonstration of current functionality, press 'Demo All Data' on the left side of the 'Testing Area'</p>
 		<p>OR</p>
-		<p>Input fields are able to accept user defined parameters (described below). Don't worry about leaving certain fields (or all) blank; they will automatically revert to the default settings. At any time you may pause or reload the data. You can also click 'Show My Report' to see the data that is being logged that relates to your 'Report Trip' inputs.  Feel free to move back and forth between the different rooms in the testing area without pausing or stopping the data flow.</p>
+		<p>Input fields are able to accept user defined parameters (described below). Don't worry about leaving certain fields (or all) blank; they will automatically revert to the default settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  At any time you may pause or reload the data stream. You can also click 'Show My Report' to see the data that is being logged that relates to your 'Report Trip' inputs. User CSV upload is currently under construction, but will be functional again shortly.</p>
 		
 		<p>User Defined Parameters:</p>
 		<p><input class='btn' placeholder='Start Time'></input>
