--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -210,21 +210,21 @@
 		<p><input class='btn' placeholder='End Time'></input>
 		Default: 18000 - End time in milliseconds.</p>
 		<p><input class='btn' placeholder='MultiX Visuals'></input>
-		Default: 60 - The ammount of movement present in the visuals that correspond to the X axis of the accelerometer. (left and right latteral)</p>
+		Default: 60 - The ammount of movement present in the images that correspond to the X axis of the accelerometer. (left and right latteral)</p>
 		<p><input class='btn' placeholder='MultiY Visuals'></input>
-		Default: 60 - The ammount of movement present in the visuals that correspond to the Y axis of the accelerometer. (braking and acceleration)</p>
+		Default: 60 - The ammount of movement present in the images that correspond to the Y axis of the accelerometer. (braking and acceleration)</p>
 		<p><input class='btn' placeholder='MultiZ Visuals'></input>
-		Default: 2 - The ammount of movement present in the visuals that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
+		Default: 2 - The ammount of movement present in the images that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
 		<p><input class='btn' placeholder='Skip Data Points'></input>
-		Default: 1 - Where N is the number you enter, this will cause the apolication to interpret only every N'th data point, while allowing the information to continue to be presented in proper time. (larger files, slower computers)</p>
+		Default: 1 - Where N is the number you enter, this will cause the application to interpret only every N'th data point, while allowing the information to continue to be presented without distorting time. (larger files, slower computers)</p>
 		<p><input class='btn' placeholder='Report Trip X'></input>
-		Default: 2 - The number N entered represents N meters/second^2.  When the force in the X direction (lateral force on the car)exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also become red.</p>
+		Default: 2 - The number N entered represents N meters/second^2. When the force in the X direction (lateral force on the car)exceeds this number, the data will be dynamically printed in the 'Show My Report' section. Certain images related to turning and lateral force will also become red.</p>
 		<p><input class='btn' placeholder='Report Trip Y'></input>
-		Default: 3 - Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also become red. </p>
+		Default: 3 - Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain images related to braking will also become red. </p>
 		<p><input class='btn' placeholder='Report Trip Z'></input>
-		Default: 12 - Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also become red.</p>
+		Default: 12 - Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain images related to bumps and dips will also become red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
-		Default: 20 - The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases.  Some data includeing time, speed and location will not be affected. Recommend less than 50.</p>
+		Default: 20 - The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases.  Some data including time, speed, and location will not be affected. Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
 		Default: 20 - The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Data'></input>
