--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -104,7 +104,7 @@
   }, false);//THANKYOU ANDREW J FOR THIS SNIPPET
 </script>
 
-		</div>
+</div>
 
 
 
@@ -202,7 +202,7 @@
 		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving and location data gathered from various sensors in your smartphone. Weather it's fast lap times you're after, new driver saftey concers or maybe you're just curious, Gearbox is a fun and accurate way for you to see whats on your cars mind. 
 		To see a quick demonstration of current functionality, press 'Demo All Data' on the left side of the 'Testing Area'</p>
 		<p>OR play with the data:</p>
-		<p>Input fields are able to accept user defined parameters (outlined below). Don't worry about leaving certain fields (or all) blank; they will automatically use the default settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  Click 'Show My Report' to see the data being logged that relates to your 'Report Trip' inputs, and at any time you may pause or reload the data stream. User CSV upload is currently under construction, but will be functional again shortly. If you forget how to log the data from your handset first, refer back to the readme in the program folder.</p>
+		<p>Input fields are able to accept user defined parameters (outlined below). Don't worry about leaving certain fields (or all) blank; they will automatically use the recommended settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  Click 'Show My Report' to see the data being logged that relates to your 'Report Trip' inputs, and at any time you may pause or reload the data stream. User CSV upload is currently under construction, but will be functional again shortly. If you forget how to log the data from your handset first, refer back to the readme in the program folder.</p>
 		
 		<p>User Defined Parameters:</p>
 		<p><input class='btn' placeholder='Start Time'></input>
@@ -216,7 +216,7 @@
 		<p><input class='btn' placeholder='MultiZ Visuals'></input>
 		Default: 2 - The ammount of movement present in the images that correspond to the Z axis of the accelerometer. (up and down, bumps and dips)</p>
 		<p><input class='btn' placeholder='Skip Data Points'></input>
-		Default: 1 - Where N is the number you enter, this will cause the application to interpret only every N'th data point, while allowing the information to continue to be presented without distorting time. (larger files, slower computers)</p>
+		Default: 1 - This will cause the application to interpret only every N'th data point, while allowing the information to continue to be presented without distorting time. (larger files, slower computers)</p>
 		<p><input class='btn' placeholder='Report Trip X'></input>
 		Default: 2 - The number N entered represents N meters/second^2. When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the 'Show My Report' section. Certain images related to turning and lateral force will also become red.</p>
 		<p><input class='btn' placeholder='Report Trip Y'></input>
