more readme and instructions

--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -199,7 +199,7 @@
 	<div class='col-7 courier-font'>
 		<button class='btn' id='data-page2'>Take Me Back To The Testing Area</button>
 		<hr>
-		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving and location data gathered from various sensors in your smartphone. Weather it's fast lap times you're after, new driver saftey concers or maybe you're just curious, Gearbox is a fun and accurate way for you to see whats on your cars mind. 
+		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving and location data gathered from various sensors in your smartphone. Weather it's fast lap times you're after, new driver saftey concers or maybe you're just curious, Gearbox is a fun and accurate way for you to see what's on your cars mind. 
 		To see a quick demonstration of current functionality, press 'Demo All Data' on the left side of the 'Testing Area'</p>
 		<p>OR play with the data:</p>
 		<p>Input fields are able to accept user defined parameters (outlined below). Don't worry about leaving certain fields (or all) blank; they will automatically use the recommended settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  Click 'Show My Report' to see the data being logged that relates to your 'Report Trip' inputs, and at any time you may pause or reload the data stream. User CSV upload is currently under construction, but will be functional again shortly. If you forget how to log the data from your handset first, refer back to the readme in the program folder.</p>
