readme and instructions updates, stabilizer visuals revised, visuals added to report page, indicators added to instructions and report buttons to make user more aware of them, fixed wheel drawing that was out of place, misc

--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -178,10 +178,10 @@
 	<button class='btn' id='data-page'>Take Me Back To The Testing Area</button>
 	<button class='btn'>Export Data</button>
 	<hr>
-	<div class='col-12'>
+	<div class='col-5'>
 		<div id='all-errors-switching'></div>
-		<div id="text-div-crash" class="space"></div>
-		<div id="text-div-airborne" class="space"></div>
+		<div id='text-div-crash' class='space'></div>
+		<div id="text-div-airborne" class='space'></div>
 		<div id="text-div-bump" class="space"></div>
 		<div id="sound-warning-message" class="space"></div>
 		<div id="text-div-braking-and-cornering" class="space"></div>
@@ -192,6 +192,12 @@
 		<div id="text-div-heavy-acceleration" class="space"></div>
 		<div id="text-div-good-driver" class="space"></div>
 		<b><div class='btn' id="highest-all-axes-window"></div></b>
+		<canvas id="canvas-reportcontent">
+		</canvas>
+	</div>
+	<div class='col-7'>
+		<canvas id='canvas-gball'>
+		</canvas>
 	</div>
 </reportcontent>
 
