accel label, size/style adjust, housekeeping

--- a/Application/stylesheets/style.css
+++ b/Application/stylesheets/style.css
@@ -395,6 +395,10 @@ canvas {
    border: none;
 }
 
+/*#canvas-accelerometer-label{
+  width: 10%;
+}*/
+
 button{
   background: beige;
   potition: fixed;
