--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -196,6 +196,7 @@
 		</canvas>
 	</div>
 	<div class='col-7'>
+		<div class='btn center' id='canvas-accelerometer-label'>Accelerometer</div>
 		<canvas id='canvas-gball'>
 		</canvas>
 	</div>
