--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -209,7 +209,7 @@
 		<h4><strong><p>Currently in development. Gearbox is a car metrics application that allows you to interpret drving and location data gathered from various sensors in your smartphone. Weather it's fast lap times you're after, new driver saftey concers or maybe you're just curious, Gearbox is a fun and accurate way for you to see what's on your cars mind. 
 		To see a quick demonstration of current functionality, press 'Demo All Data' on the left side of the 'Testing Area'</p>
 		<p>OR play with the data:</p>
-		<p>Input fields are able to accept user defined parameters (outlined below). Don't worry about leaving certain fields (or all) blank; they will automatically use the recommended settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  Click 'Show My Report' to see the data being logged that relates to your 'Report Trip' inputs, and at any time you may pause or reload the data stream. User CSV upload is currently under construction, but will be functional again shortly. If you forget how to log the data from your handset first, refer back to the readme in the program folder.</p>
+		<p>Input fields are able to accept user defined parameters (outlined below). Don't worry about leaving certain fields (or all) blank; they will automatically use the default settings. Feel free to move back and forth between the different rooms in the Testing Area without affecting the data flow.  Click 'Show My Report' to see the data being logged that relates to your 'Report Trip' inputs, and at any time you may pause or reload the data stream. User CSV upload is currently under construction, but will be functional again shortly. If you forget how to log the data from your handset first, refer back to the readme in the program folder.</p>
 		
 		<p>User Defined Parameters:</p>
 		<p><input class='btn' placeholder='Start Time'></input>
@@ -231,11 +231,11 @@
 		<p><input class='btn' placeholder='Report Trip Z'></input>
 		Default: 12 - Report Trip Z: The number N entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain images related to bumps and dips will also become red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
-		Default: 20 - The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases.  Certain data including time, speed, and location will not be affected. Recommend less than 50.</p>
+		Default: 1 - The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases difficult to read or interpret.  The higher the number entered into this field, the more stable the graphic respresentations (car and orientation drawings) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate as the number increases.  Certain data including time, speed, and location will not be affected. Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
-		Default: 20 - The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
+		Default: 1 - The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50.</p>
 		<p><input class='btn' placeholder='Stabilizer Data'></input>
-		Default: 20 - The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50.</p>
+		Default: 1 - The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50.</p>
 
 		<p><input value='Load Profile' class='btn'></input>
 		Push this button after entering your custom parameters.  If any fields are left blank, they will use the default values so you may pick and choose which custom parameters you would like to test with</p>
